Reworked teacher app.
- Added toasts
- Improved BasicFunction module (for developers)
- Added selection to start new Session and let the client connect.

--- a/teacher-server/application/index.html
+++ b/teacher-server/application/index.html
@@ -112,7 +112,11 @@
                     </div>
                 </div>
                 <div class="startSession" hidden>
-                    <h2>Commencer une session</h2>
+                    <button class="bcss-b-simple" onclick="LaboFactice.goToMenu()">Menu</button>
+                    <h2>Commencer une session: Selectionnez une leçon</h2>
+                    <div id="lessonList_startSession" class="lessonList">
+
+                    </div>
                 </div>
                 <div class="sessionHistory" hidden>
                     <h2>Historique des sessions</h2>
