Initialized student-client application

--- a/student-client/application/index.html
+++ b/student-client/application/index.html
@@ -38,7 +38,7 @@
         </div>
 
 
-        <div id="loginbox" hidden>
+        <div id="loginbox">
             <div class="bcss-centercontentdivmiddle">
                 <div class="login_center_box bcss-centerdiv">
                     <button class="bcss-b-simple" style="margin:0px;" onclick="openConfigFile()">Configuration</button>
@@ -61,7 +61,7 @@
             </div>
         </div>
 
-        <div id="application">
+        <div id="application" hidden>
 
             <div class="bandeau" style="display:flex;flex-direction: row;align-items: center;">
                 <h1 class="title" style="margin:0;margin-left: 20px;font-family: cursive;">LaboFactice</h1>
