Working on teacher front

--- a/teacher-server/application/index.html
+++ b/teacher-server/application/index.html
@@ -84,6 +84,9 @@
                     <div class="sessionHistory" onclick="LaboFactice.selectMenu('sessionHistory')">
                         <h2>Historique des sessions</h2>
                     </div>
+                    <div class="sessionHistory" onclick="LaboFactice.selectMenu('inSession')">
+                        <h2>En session des sessions</h2>
+                    </div>
                 </div>
             </div>
 
@@ -116,6 +119,29 @@
                     <h2>Commencer une session: Selectionnez une leçon</h2>
                     <div id="lessonList_startSession" class="lessonList">
 
+                    </div>
+                </div>
+                <div class="inSession" hidden>
+                    <div class="flex">
+                        <div class="left">
+                            <div class="classCanva" style="position:relative;">
+                                <div class="computer hovertext noselect">32
+                                    <div class="content">
+                                        <span class="recordBar recording">01:12:01 <span class="inRecordMention">• (Recording)</span></span>
+                                        <span>0 Enregistrements</span>
+                                    </div>
+                                </div>
+                                <div id="aaa" class="computer hovertext noselect" style="top:60px;left: 40px;">33
+                                    <div class="content">
+                                        <span class="recordBar recording">01:12:01 <span class="inRecordMention">• (Recording)</span></span>
+                                        <span>0 Enregistrements</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="right">
+    
+                        </div>
                     </div>
                 </div>
                 <div class="sessionHistory" hidden>
