Working on realtime computer map and backend of application

--- a/student-client/application/index.html
+++ b/student-client/application/index.html
@@ -46,7 +46,7 @@
                     <input id="login_firstname" class="bcss-input1" placeholder="Prénom">
                     <input id="login_lastname" class="bcss-input1" placeholder="Nom de famille">
                     <input id="login_birthday" class="bcss-input1" type="date">
-                    <button class="bcss-b-simple" style="margin: 0px auto;margin-top: 10px;" onclick="makeLogin()">Rejoindre la session</button>
+                    <button class="bcss-b-simple" style="margin: 0px auto;margin-top: 10px;" onclick="LaboFactice.makeLogin()">Rejoindre la session</button>
                     <button class="bcss-b-simple-warn" style="margin: 0px auto;margin-top: 10px;">Attendre le début de la session</button>
                     <div class="buttons">
                     </div>
