--- a/teacher-server/application/index.html
+++ b/teacher-server/application/index.html
@@ -125,11 +125,12 @@
                     <div class="flex">
                         <div class="left">
                             <div id="inSession_computer_canva" class="classCanva" style="position:relative;">
-                                <div id="computer_name_1" class="computer hovertext noselect">32
+                                /*<div id="computer_name_1" class="computer hovertext noselect">32
                                     <div class="content">
                                         <span><span class="studentLastname">BARREAU</span> <span class="studentFirstname">Jean</span></span>
                                         <span class="recordBar"><span class="recordTime">00:00:00</span> <span class="inRecordMention">• (Recording)</span></span>
                                         <span><span class="recordCount">0</span> Enregistrements</span>
+                                        <span><span class="computerName">PC: computerName</span></span>
                                     </div>
                                 </div>
                                 <div id="computer_name_2" class="computer hovertext noselect" style="top:60px;left: 40px;">33
@@ -137,8 +138,10 @@
                                         <span><span class="studentLastname">BARREAU</span> <span class="studentFirstname">Jean</span></span>
                                         <span class="recordBar"><span class="recordTime">00:00:00</span> <span class="inRecordMention">• (Recording)</span></span>
                                         <span><span class="recordCount">0</span> Enregistrements</span>
+                                        <span><span class="computerName">PC: computerName</span></span>
                                     </div>
                                 </div>
+                                */
                             </div>
                             <button class="bcss-b-simple" onclick='LaboFactice.CanvaComputersFunctions.makeCanvaDraggable(document.getElementById("inSession_computer_canva"))'>Modifier</button>
                             <button class="bcss-b-simple" onclick='LaboFactice.CanvaComputersFunctions.stopCanvaDraggable(document.getElementById("inSession_computer_canva"))'>Arrêter de modifier</button>
