--- a/teacher-server/application/index.html
+++ b/teacher-server/application/index.html
@@ -125,7 +125,7 @@
                     <div class="flex">
                         <div class="left">
                             <div id="inSession_computer_canva" class="classCanva" style="position:relative;">
-                                /*<div id="computer_name_1" class="computer hovertext noselect">32
+                                <!-- <div id="computer_name_1" class="computer hovertext noselect">32
                                     <div class="content">
                                         <span><span class="studentLastname">BARREAU</span> <span class="studentFirstname">Jean</span></span>
                                         <span class="recordBar"><span class="recordTime">00:00:00</span> <span class="inRecordMention">• (Recording)</span></span>
@@ -141,11 +141,12 @@
                                         <span><span class="computerName">PC: computerName</span></span>
                                     </div>
                                 </div>
-                                */
+                                -->
                             </div>
                             <button class="bcss-b-simple" onclick='LaboFactice.CanvaComputersFunctions.makeCanvaDraggable(document.getElementById("inSession_computer_canva"))'>Modifier</button>
                             <button class="bcss-b-simple" onclick='LaboFactice.CanvaComputersFunctions.stopCanvaDraggable(document.getElementById("inSession_computer_canva"))'>Arrêter de modifier</button>
                             <button class="bcss-b-simple-success" onclick='LaboFactice.CanvaComputersFunctions.stopCanvaDraggable(document.getElementById("inSession_computer_canva"), true)'>Sauvegarder</button>
+                            <button class="bcss-b-simple" onclick="LaboFactice.importConnectedComputersAndSave()">Import connected computers and save them to config</button>
                         </div>
                         <div class="right">
     
