Added toasting to student app + improved BasicFunction script

--- a/student-client/application/index.html
+++ b/student-client/application/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/basicCss.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/global/toasting.css">
 </head>
 
 <body>
 
+    <div id="toasting" style="position: absolute;"></div>
 
     <div id="mainbox">
 
@@ -138,6 +140,8 @@
     
     
 
+    <script src="./scripts/global/toasting.js"></script>
+    <script src="./scripts/Logger.js"></script>
     <script src="./scripts/BasicF.js"></script>
   <script> 
    
