--- a/teacher-server/application/index.html
+++ b/teacher-server/application/index.html
@@ -149,6 +149,7 @@
                             <button class="bcss-b-simple-success" onclick='LaboFactice.CanvaComputersFunctions.stopCanvaDraggable(document.getElementById("inSession_computer_canva"), true)'>Sauvegarder</button>
                             <button class="bcss-b-simple" onclick="LaboFactice.importConnectedComputersAndSave()">Import connected computers and save them to config</button>
                             <button class="bcss-b-simple" onclick="LaboFactice.displayComputerNamePages()">Afficher le nom des ordinateurs sur les écrans</button>
+                            <button class="bcss-b-simple-danger" onclick="LaboFactice.stopSession()">Terminer la session</button>
                             
                         </div>
                         <div class="right">
