Fixes and work on connected users list menu
- Add icon
- Add internal socket emitter for laboFactice instance
- Fix css
- Working on connected users list menu
- Now logging user name on disconnect

--- a/student-client/application/index.html
+++ b/student-client/application/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/basicCss.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/global/toasting.css">
+    <link rel="shortcut icon" href="/application/LaboFacticeLogo.ico">
 </head>
 
 <body>
