Added connected users list page + fixes
- Added Emitter to teacher-server BasicF
- Created internal emitter socket for teacher-server
- Added connected Users List page
- Fixes on server code for teacher-server

--- a/teacher-server/application/index.html
+++ b/teacher-server/application/index.html
@@ -164,6 +164,7 @@
                     <h2>Historique des sessions</h2>
                 </div>
                 <div class="connectedUsersList" hidden>
+                    <button class="bcss-b-simple" onclick="LaboFactice.goToMenu()">Menu</button>
                     <h2>Utilisateurs connectés:</h2>
 
                     <table id="connectedUsersList_listElement">
@@ -173,16 +174,6 @@
                                 <td class="birthday"><b>Date de naissance</b></td>
                                 <td class="lastname"><b>Nom</b></td>
                                 <td class="firstname"><b>Prénom</b></td>
-                            </tr>
-                            <tr class="user">
-                                <td class="birthday">30/09/2004</td>
-                                <td class="lastname">VIDALaaaaaaaaaaaaaa</td>
-                                <td class="firstname">Quentin</td>
-                            </tr>
-                            <tr class="user">
-                                <td class="birthday">30/09/2004</td>
-                                <td class="lastname">VIDAL</td>
-                                <td class="firstname">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
                             </tr>
                         </tbody>
                     </table>
