Added Callteacher feature

--- a/student-client/application/index.html
+++ b/student-client/application/index.html
@@ -64,7 +64,7 @@
 
             <div class="bandeau" style="display:flex;flex-direction: row;align-items: center;">
                 <h1 class="title" style="margin:0;margin-left: 20px;font-family: cursive;">LaboFactice</h1>
-                <button class="bcss-b-simple-warn bcss-b-disabled callTeacher" style="margin: auto;">Appeller le professeur</button>
+                <button id="application_button_callTeacher" class="bcss-b-simple callTeacher" style="margin: auto;" onclick="LaboFactice.toggleCallTeacher()">Appeller le professeur</button>
                 <button class="bcss-b-simple-danger" onclick="LaboFactice.quit()">Quitter</button>
             </div>
             <div class="app">
