--- a/teacher-server/application/index.html
+++ b/teacher-server/application/index.html
@@ -161,6 +161,7 @@
                     </div>
                 </div>
                 <div class="sessionHistory" hidden>
+                    <button class="bcss-b-simple" onclick="LaboFactice.goToMenu()">Menu</button>
                     <h2>Historique des sessions</h2>
                 </div>
                 <div class="connectedUsersList" hidden>
